--- a/TestApplicaton.DataModel/TestApplicaton.DataModel.csproj
+++ b/TestApplicaton.DataModel/TestApplicaton.DataModel.csproj
@@ -51,15 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Permission.cs" />
-    <Compile Include="PermissionRole.cs" />
-    <Compile Include="PermissionType.cs" />
+    <Compile Include="Models\Permission.cs" />
+    <Compile Include="Models\PermissionRole.cs" />
+    <Compile Include="Models\PermissionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Role.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="TestApplication.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserPassword.cs" />
-    <Compile Include="UserRole.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserPassword.cs" />
+    <Compile Include="Models\UserRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
